src/objects/More_Conversion_Details__c/More_Conversion_Details__c.object-meta.xml
<CustomObject>
    <description>Child of Conversion_Details__c To Track More Conversion Details</description>
    <label>More Conversion Detail</label>
    <nameField>
        <displayFormat>MCD-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>More Conversion Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>