src/objects/More_Conversion_Details__c/fields/Conversion_Detail__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Detail__c</fullName>
    <label>Conversion Detail</label>
    <referenceTo>Conversion_Details__c</referenceTo>
    <relationshipLabel>More Conversion Details</relationshipLabel>
    <relationshipName>More_Conversion_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>