src/objects/More_Conversion_Details__c/fields/Legacy_ID_More_Conv_Details__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID_More_Conv_Details__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy_ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>