src/objects/More_Conversion_Details__c/fields/New_P_N_Disposition_Remarks__c.field-meta.xml
<CustomField>
    <fullName>New_P_N_Disposition_Remarks__c</fullName>
    <label>New P/N Disposition Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>