src/objects/More_Conversion_Details__c/fields/New_PN_Disposition__c.field-meta.xml
<CustomField>
    <fullName>New_PN_Disposition__c</fullName>
    <label>New P/N Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transferred to new loaner</fullName>
            </value>
            <value>
                <fullName>FNE</fullName>
            </value>
            <value>
                <fullName>IC Supplier</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
            <value>
                <fullName>PE Team</fullName>
            </value>
            <value>
                <fullName>Purchased by Rep/Disti</fullName>
            </value>
            <value>
                <fullName>Purchased by Customer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>