src/objects/More_Conversion_Details__c/fields/New_PN_Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>New_PN_Disposition_Date__c</fullName>
    <label>New P/N Disposition Date</label>
    <type>Date</type>
</CustomField>