src/objects/More_Conversion_Details__c/fields/New_PN_Disposition_Qty__c.field-meta.xml
<CustomField>
    <fullName>New_PN_Disposition_Qty__c</fullName>
    <label>New P/N Disposition Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>