src/objects/More_Conversion_Details__c/validationRules/More_Conversion_Detail_Qty_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>More_Conversion_Detail_Qty_Validation</fullName>
    <active>true</active>
    <description>More Conversion Qty Should be greater than zero</description>
    <errorConditionFormula>New_PN_Disposition_Qty__c &lt;= 0</errorConditionFormula>
    <errorMessage>More Conversion Qty Should be greater than zero</errorMessage>
</ValidationRule>